--- a/GPS_tracker/app/src/main/res/layout/activity_main.xml
+++ b/GPS_tracker/app/src/main/res/layout/activity_main.xml
@@ -51,6 +51,7 @@
     </LinearLayout>
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/resultList"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
