--- a/GPS_tracker/app/src/main/res/layout/row.xml
+++ b/GPS_tracker/app/src/main/res/layout/row.xml
@@ -2,9 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
+
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"/>
+        android:layout_margin="5dp"
+        android:background="#E0F2F1"
+        android:padding="3dp"
+        android:text="와 정말 놀랍다" />
 
 </LinearLayout>
