--- a/GPS_tracker/app/src/main/res/layout/row.xml
+++ b/GPS_tracker/app/src/main/res/layout/row.xml
@@ -8,8 +8,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
-        android:background="#E0F2F1"
+        android:background="#000000"
         android:padding="3dp"
-        android:text="와 정말 놀랍다" />
+        android:text="와 정말 놀랍다"
+        android:textColor="#FFFFFF" />
 
 </LinearLayout>
